--- a/ang2test/src/app/app.component.html
+++ b/ang2test/src/app/app.component.html
@@ -1,1 +1,17 @@
-<app-menu></app-menu>
+<div class="container-fluid">
+    <div class="row">
+        <div class="col p-0">
+            <app-menu></app-menu>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-3">
+            <app-sidebar></app-sidebar>
+        </div>
+        <div class="col-1"></div>
+        <div class="col-8">
+            <app-content></app-content>
+        </div>
+
+    </div>
+</div>
